--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/jocoso/a-random-blog#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-handlebars": "^8.0.1"
+    "express-handlebars": "^8.0.1",
+    "pg": "^8.12.0",
+    "postgres": "^3.4.4"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.9"
