Changed the setupDB so it play nice with render

--- a/.env.SAMPLE
+++ b/.env.SAMPLE
@@ -4,6 +4,8 @@
 
 DB_HOST=localhost
 DB_NAME=blog_db
-DB_USER=database-user
-DB_PASSWORD=database-password
-PORT=database-port
+DB_USER=postgres
+DB_PASSWORD=2101
+DB_PORT=5432
+PORT=3001
+DATABASE_URL=postgres://username:password@host:port/databasename
