--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "express": "^4.19.2",
     "express-handlebars": "^8.0.1",
     "pg": "^8.12.0",
-    "postgres": "^3.4.4"
+    "pg-hstore": "^2.3.4",
+    "postgres": "^3.4.4",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.9"
