--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "A simple blog",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_ENV=test jest --detectOpenHandles",
     "start": "nodemon server.js",
     "build": "npm install"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "repository": {
     "type": "git",
@@ -29,6 +32,9 @@
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
     "tailwindcss": "^3.4.9"
   }
 }
