--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "express": "^4.19.2",
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.0",
+    "helmet": "^8.0.0",
     "node-fetch": "^3.3.2",
+    "nodemon": "^3.1.7",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "postgres": "^3.4.4",
